# testing_laboratory

./: .gitignore  pyproject.toml
.github/workflows/: tests.yml
docs/: marco_aprendizaje_testing.docx  marco_aprendizaje_testing_publico.docx
src/testing_lab/: core.py
tests/: conftest.py  test_classify.py  test_dependencies.py  test_fixtures.py  test_integration.py  test_normalize.py  test_subtests.py
