[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "testing-laboratory"
version = "0.1.0"
description = "Laboratorio autónomo para aprender testing con Python y pytest"
requires-python = ">=3.14"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = [
    "pytest>=9,<10",
]